# neexee

./: .gitignore  Makefile  README  bot.cpp  bot.h  config.sample  convert.h  feachrequest  features  index.html  ko.cpp  main.cpp  neexee  settings.cpp  settings.h  test.cpp  todo  tools.cpp  tools.h
dictionaries/: dict
scripts/: best_os.py  sovet.sh  test.sh
src/: CMakeLists.txt  Makefile  bot.cpp  bot.h  convert.h  main.cpp  messageserver.h  modulehandler.cpp  modulehandler.h  run.sh  settings.cpp  settings.h  tools.cpp  tools.h  viewdir
src/bot/: CMakeLists.txt  Makefile  bot.cpp  bot.h  botinterface.h  query.cpp  query.h
src/bot/stdio_proto/: Makefile  stdio_proto.cpp
src/bot/test/: Makefile  test_protocol.cpp
src/bot/test_module/: Makefile  test_module.cpp
src/console/: CMakeLists.txt  console.cpp  console.h
src/core/: Makefile  core  core.cpp  core_module.h  module.h  module_handler.h
src/debug/: CMakeLists.txt  debug.cpp  debug.h
src/message/: CMakeLists.txt  message.cpp  message.h
src/module/: CMakeLists.txt  asyncmodule.cpp  asyncmodule.h  defaultmodule.cpp  defaultmodule.h  exrc  module.h  moduleexecutor.cpp  moduleexecutor.h  modulefactory.h  modulenotfoundexeption.h  ping.cpp  ping.h
src/module/help/: CMakeLists.txt  helpmodule.cpp  helpmodule.h
src/module/history/: CMakeLists.txt  history.cpp  history.h
src/module/koko/: CMakeLists.txt  kokomodule.cpp  kokomodule.h
src/module/ping/: CMakeLists.txt  ping.cpp  ping.h
src/module/pluginexecutor/: CMakeLists.txt  pluginexecutor.cpp  pluginexecutor.h
src/module/smart/: CMakeLists.txt  dict  main.cpp  module.cpp  module.h  pairs  smartmodule.cpp  smartmodule.h
src/module/who/: CMakeLists.txt  whomodule.cpp  whomodule.h
src/moduleexecutor/: CMakeLists.txt  moduleexecutor.cpp  moduleexecutor.h
src/named_socket/: socket.cpp  socket.h  tags
src/settings/: CMakeLists.txt  convert.cpp  convert.h  settings.cpp  settings.h
src/tools/: CMakeLists.txt  tokenizer.cpp  tokenizer.h  tools.cpp  tools.h
