cmake_minimum_required (VERSION 2.6) 
project (MAIN)
IF (UNIX)
    SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -std=c++0x -DDEBUG=3 -lgloox -lpthread")
    SET (CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--as-needed")
    SET (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--as-needed -lgloox -lpthread ")
    IF (EXTRA_WARNINGS)
        SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall  -Wextra")
    ENDIF (EXTRA_WARNINGS)
    IF (USE_PIPE)
        SET (CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -pipe")
    ENDIF (USE_PIPE)
ENDIF (UNIX)
OPTION (WITH_PLUGINS "Build a somewhat standard set of plugins as well" ON)
#OPTION (ENABLE_KOKO "Build koko plugin, which koko on lisp, haskell, etc." OFF )
add_subdirectory (bot)
add_subdirectory (settings)
add_subdirectory (debug)
add_subdirectory (moduleexecutor)
add_subdirectory (tools)
add_subdirectory (console)
add_subdirectory (module)
add_executable (main main.cpp)
target_link_libraries (main bot settings)
